--- a/.github/workflows/snake.yml
+++ b/.github/workflows/snake.yml
@@ -2,8 +2,8 @@ name: generate-snake
 
 on:
   schedule:
-    # Every Monday at 00:00 UTC
-    - cron: "0 0 * * 1"
+    # Daily at 00:05 UTC
+    - cron: "5 0 * * *"
   workflow_dispatch:
 
 permissions:
