--- a/.github/workflows/snake.yml
+++ b/.github/workflows/snake.yml
@@ -1,10 +1,13 @@
-name: generate-snake
+name: Generate Snake
 
 on:
   schedule:
-    # Daily at 00:05 UTC
-    - cron: "5 0 * * *"
+    - cron: "0 */12 * * *"
   workflow_dispatch:
+  push:
+    branches:
+      - main
+      - master
 
 permissions:
   contents: write
@@ -13,19 +16,19 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout
-        uses: actions/checkout@v4
-
-      - name: Generate snake SVG
-        uses: Platane/snk/svg-only@v3
+      - name: Generate snake animation
+        uses: Platane/snk@v3
         with:
-          github_user_name: iiRoy
+          github_user_name: ${{ github.repository_owner }}
           outputs: |
-            assets/github-snake.svg?palette=github-dark
+            dist/github-snake.svg
+            dist/github-snake-dark.svg?palette=github-dark
+            dist/github-snake-light.svg?palette=github-light
 
-      - name: Commit and push
-        uses: EndBug/add-and-commit@v9
+      - name: Deploy to GitHub Pages (output branch)
+        uses: crazy-max/ghaction-github-pages@v4
         with:
-          default_author: github_actions
-          message: "chore: update snake"
-          add: "assets/github-snake.svg"
+          target_branch: output
+          build_dir: dist
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
