--- a/.github/workflows/snake.yml
+++ b/.github/workflows/snake.yml
@@ -1,13 +1,10 @@
-name: Generate Snake
+name: generate-snake
 
 on:
   schedule:
-    - cron: "0 */12 * * *"
+    # Daily at 00:05 UTC
+    - cron: "5 0 * * *"
   workflow_dispatch:
-  push:
-    branches:
-      - main
-      - master
 
 permissions:
   contents: write
@@ -16,19 +13,19 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-      - name: Generate snake animation
-        uses: Platane/snk@v3
-        with:
-          github_user_name: ${{ github.repository_owner }}
-          outputs: |
-            dist/github-snake.svg
-            dist/github-snake-dark.svg?palette=github-dark
-            dist/github-snake-light.svg?palette=github-light
+      - name: Checkout
+        uses: actions/checkout@v4
 
-      - name: Deploy to GitHub Pages (output branch)
-        uses: crazy-max/ghaction-github-pages@v4
+      - name: Generate snake SVG
+        uses: Platane/snk/svg-only@v3
         with:
-          target_branch: output
-          build_dir: dist
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          github_user_name: iiRoy
+          outputs: |
+            assets/github-snake.svg?palette=github-dark
+
+      - name: Commit and push
+        uses: EndBug/add-and-commit@v9
+        with:
+          default_author: github_actions
+          message: "chore: update snake"
+          add: "assets/github-snake.svg"
