--- a/.github/workflows/metrics.yml
+++ b/.github/workflows/metrics.yml
@@ -2,8 +2,8 @@ name: generate-metrics
 
 on:
   schedule:
-    # Daily at 00:10 UTC
-    - cron: "10 0 * * *"
+    # Twice daily
+    - cron: "0 */12 * * *"
   workflow_dispatch:
 
 permissions:
@@ -22,23 +22,26 @@ jobs:
           token: ${{ secrets.GITHUB_TOKEN }}
           user: iiRoy
           template: classic
-          base: header, repositories
+          base: header, repositories, activity, community
           config_timezone: America/Mexico_City
           plugin_languages: yes
           plugin_languages_indepth: yes
           plugin_languages_details: bytes-size, percentage
           plugin_isocalendar: yes
           plugin_isocalendar_duration: full-year
+          plugin_followup: yes
+          plugin_followup_sections: repositories, user
+          plugin_lines: yes
           output_action: none
 
       - name: Move metrics to assets
         run: |
           mkdir -p assets
-          mv metrics.svg assets/metrics.svg
+          mv metrics.svg assets/stats.svg
 
       - name: Commit and push
         uses: EndBug/add-and-commit@v9
         with:
           default_author: github_actions
-          message: "chore(stats): update metrics"
-          add: "assets/metrics.svg"
+          message: "chore(stats): update profile metrics"
+          add: "assets/stats.svg"
